# ark-circom-example

./: Cargo.toml  README.md
ark-circom-basic-process/: Cargo.toml
ark-circom-basic-process/src/testdata/: generate-proof.sh
ark-circom-basic-process/src/testdata/circuit/: circuit.circom
ec/: Cargo.toml
ec/src/models/: short_weierstrass_jacobian.rs
exact-arkworks/: Cargo.toml
exact-arkworks/src/: main.rs
exact-arkworks/src/testdata/circom/: README.md
ff/: Cargo.toml
ff/src/fields/: mod.rs
ff/src/fields/models/: cubic_extension.rs  quadratic_extension.rs
read-from-snarkjs-prove-by-arkworks/: Cargo.toml  Makefile
read-from-snarkjs-prove-by-arkworks/src/: loader.rs  main.rs  testdata_json.rs
read-from-snarkjs-prove-by-arkworks/src/utils/: data_structures.rs  loader.rs  verifier.rs
read-proof-file-complex/: .gitignore  Cargo.toml
read-proof-file-complex/src/: loader.rs  main.rs
src/: main.rs
test-curves/: Cargo.toml
test-templates/: Cargo.toml
