[package]
name = "ark-circom-basic-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false }
arkworks-circom-verifier = { path = "../third-parties/arkworks-gadgets/arkworks-circom-verifier" }
serde_json = "1.0.64"