[package]
name = "read-proof-file-complex"
version = "0.1.0"
edition = "2021"

[dependencies]
num = { version = "0.4.0" }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

# ZKP Generation
ark-ec = { version = "0.3.0", path = "../ec", default-features = false }
ark-ff = { version = "0.3.0", path = "../ff", default-features = false }
ark-std = { version = "0.3.0", default-features = false }
ark-bn254 = { version = "0.3.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f" }
ark-poly = { version = "^0.3.0", default-features = false }
ark-relations = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", default-features = false }

# dev
color-eyre = "0.5"
serde_json = "1.0.74"
